<resources>
    <string name="app_name">Nasıl Giderim</string>
    <string name="title_activity_app_main">AppMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ahmet ÇETİNKAYA</string>
    <string name="nav_header_subtitle">ahmet.cetinkaya2016@gtu.edu.tr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayarlar</string>

    <string name="menu_home">Anasayfa</string>
    <string name="menu_myRoutes">Rotalarım</string>
    <string name="menu_searchRoutes">Rota Bul</string>
    <string name="menu_offlineMap">Çevrimdışı Harita</string>
    <string name="menu_createRoute">Rota Oluştur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="access_token">pk.eyJ1IjoiZ2VvYmlsZ2kiLCJhIjoiY2tlczd0M2JtNGs4aDJybHRndWk1MGU0ZCJ9.3L9wqRJgM72OBBgqEfWKLw</string>

    <string name="user_location_permission_explanation">Konum izni verilsin mi</string>
    <string name="user_location_permission_not_granted">Konum izni verilmedi</string>
    <string name="set_region_name_hint">Bölge Adını Gir</string>
    <string name="dialog_title">İndir</string>
    <string name="dialog_message">Haritadan istediğiniz bir bölgeyi seçin</string>
    <string name="dialog_positive_button">İndir</string>
    <string name="dialog_toast">Uyarı</string>
    <string name="dialog_negative_button">Vazgeç</string>
    <string name="end_progress_success">İlerleme Tamamlandı</string>
    <string name="toast_no_regions_yet">Henüz Bölge Yok</string>
    <string name="navigate_title">Olmsuz Başlık</string>
    <string name="navigate_positive_button">Konum Bul</string>
    <string name="navigate_neutral_button_title">Bölgeyi Sil</string>
    <string name="toast_region_deleted">Bölge Silindi</string>
    <string name="navigate_negative_button_title">Konum Bulma İptal Edildi</string>
    <string name="region_name">Region %1$d</string>
</resources>