<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_createRoute"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_createRoute" />

        <item
            android:id="@+id/nav_myRoutes"
            android:icon="@drawable/ic_destination"
            android:title="@string/menu_myRoutes" />

        <item
            android:id="@+id/nav_offlineMap"
            android:icon="@android:drawable/ic_popup_disk_full"
            android:title="@string/menu_offlineMap" />

        <item
            android:id="@+id/nav_logOut"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Oturum Kapat" />
    </group>
</menu>