<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ahmetcet.travel_route_optimization_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_myRoutes"
        android:name="com.ahmetcet.travel_route_optimization_app.ui.myRoutes.MyRoutesFragment"
        android:label="@string/menu_myRoutes"
        tools:layout="@layout/fragment_my_routes" />

    <fragment
        android:id="@+id/nav_offlineMap"
        android:name="com.ahmetcet.travel_route_optimization_app.ui.offlineMap.OfflineMapFragment"
        android:label="@string/menu_offlineMap"
        tools:layout="@layout/fragment_offline_map" />

    <fragment
        android:id="@+id/nav_searchRoute"
        android:name="com.ahmetcet.travel_route_optimization_app.ui.searchRoutes.SearchRouteFragment"
        android:label="@string/menu_searchRoutes"
        tools:layout="@layout/fragment_search_route" />
</navigation>